# ArchaeologicalMap

./: .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  README.md  angular.json  jest.config.ts  package-lock.json  package.json  setup-jest.ts  test.db  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: node.js.yml  rust.yml  tauri.yml
AM.Api/: am.yml
src/: index.html  styles.scss  theme-light.scss  theme.scss
src-tauri/: .env  Cargo.toml  tauri.conf.json  test.db
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: test.db
src-tauri/migrations/2023-02-04-105924_create_card/: down.sql  up.sql
src-tauri/migrations/2023-05-05-182011_add_icon_column/: down.sql  up.sql
src-tauri/migrations/2023-05-29-150034_create_marker/: down.sql  up.sql
src-tauri/migrations/2023-05-29-152830_drop_marker_from_card/: down.sql  up.sql
src-tauri/migrations/2023-08-13-085021_create_catalogue/: down.sql  up.sql
src-tauri/migrations/2023-08-13-085021_create_stack/: down.sql  up.sql
src-tauri/migrations/2024-04-20-172959_add_image_entity/: down.sql  up.sql
src-tauri/migrations/2025-03-23-094708_unify_marker_and_card/: down.sql  up.sql
src-tauri/migrations/2025-07-01-111336_optional_location_data/: down.sql  up.sql
src-tauri/migrations/2026-01-28-155455_add_last_used_to_images/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/persistence/: card.rs  cards.rs  images.rs  markers.rs  mod.rs  stacks.rs  unified-cards.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/cards/card-details/: card-details.component.ts  test.html
src/app/cards/card-list/: card-list.component.ts
src/app/cards/card-update-modal/: card-update-modal.component.ts
src/app/cards/card-wizzard/: card-wizzard.component.ts
src/app/components/maplibre/: maplibre.component.spec.ts  maplibre.component.ts
src/app/components/overview-map/: overview-map.component.html  overview-map.component.scss  overview-map.component.ts  (+2 more)
src/app/model/: card.spec.ts  card.ts  image.ts  marker.ts  markerAM.ts  stack.ts
src/app/overview-map/: overview-map.component.ts
src/app/services/: card-content.service.ts  card.service.spec.ts  card.service.ts  icon.service.ts  image.service.spec.ts  image.service.ts  map-position.service.ts  marker.service.spec.ts  marker.service.ts  notification.service.ts  overview-map.service.spec.ts  overview-map.service.ts  popup.service.ts  random-cards.service.ts  setting.service.ts  stack.service.ts  window.service.ts
src/app/state/: card-details-signal.store.spec.ts  card-details-signal.store.ts  card-details.store.ts  overview-map.store.ts  stack.actions.ts  stack.effects.ts  stack.reducer.ts  stack.selectors.ts  stack.store.ts
src/app/util/: quill-util.ts  window-util.spec.ts  window-util.ts
types/quill-image-resize-module/: index.d.ts
(+69 files in other folders)
